--- a/.github/workflows/master_Fooderz.yml
+++ b/.github/workflows/master_Fooderz.yml
@@ -22,15 +22,15 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
-        registry: https://mcr.microsoft.com/
-        username: ${{ secrets.AzureAppService_ContainerUsername_86d25dd4d1c244b6b5613efb6fc03924 }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_5468428eed524bfbb297751c058dd485 }}
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.AzureAppService_ContainerUsername_b971bf76204e440da24890fd2367ed96 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_53901c65aa2d48ee92d83a61d963e11e }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_86d25dd4d1c244b6b5613efb6fc03924 }}/appsvc/staticsite:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_b971bf76204e440da24890fd2367ed96 }}/2324frontend:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'Fooderz'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_7386568d249547d8943792eb9af6b3f8 }}
-        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_86d25dd4d1c244b6b5613efb6fc03924 }}/appsvc/staticsite:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_e30fdb71ba0547bb877c124729d5b7c6 }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_b971bf76204e440da24890fd2367ed96 }}/2324frontend:${{ github.sha }}'
