Update master_Fooderz.yml update dockerfile
update Dockerfile

update dockerfile

update dockerfile

Update Dockerfile
Update Dockerfile

update Dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile

update dockerfile nginx

update dockerfile nginx

dockerfile

update dockerfile

update dockerfile

update dockerfile

--- a/.github/workflows/master_Fooderz.yml
+++ b/.github/workflows/master_Fooderz.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         push: true
         tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_b971bf76204e440da24890fd2367ed96 }}/2324frontend:${{ github.sha }}
-        file: ./Dockerfile
+        file: ./sem3frontend/Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
