--- a/sem3frontend/package.json
+++ b/sem3frontend/package.json
@@ -21,6 +21,7 @@
     "@microsoft/signalr": "^8.0.0",
     "bootstrap": "^5.3.2",
     "guid-typescript": "^1.0.9",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
