--- a/sem3frontend/package.json
+++ b/sem3frontend/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@aspnet/signalr": "^1.0.27",
     "@microsoft/signalr": "^8.0.0",
     "bootstrap": "^5.3.2",
+    "cypress": "^13.6.3",
     "guid-typescript": "^1.0.9",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
